@@ -18,12 +18,6 @@ input[type="submit"], input[type="button"], input[type="reset"], input[type="fil
 /* @noflip */textarea[dir="ltr"], input[dir="ltr"] { direction: ltr; }
 /* @noflip */textarea[dir="rtl"], input[dir="rtl"] { direction: rtl; }
 
-/* The scripts of these languages are very hard to read with underlines */
-[lang="ar"] a, [lang="ckb"] a, [lang="fa"] a, [lang="kk-arab"] a,
-[lang="mzn"] a, [lang="ps"] a, [lang="ur"] a {
-	text-decoration: none;
-}
-
 /* Default style for semantic tags */
 abbr, acronym, .explain {
 	border-bottom: 1px dotted black;
